2023-05-05  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: Fix memory leak.

2023-05-04  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: Provide function IsTopoL.

2023-05-03  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat Added checking for TopoL.
	* coders/topol.c: Added extension checking to function.

2023-05-02  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: Fix a problem when filename contains garbage only.
        Reported as oss-fuzz-58544.

2023-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/heif.c (ReadHEIFImage): Change comments to C99
	syntax. Try to fix compilation with version of libheif prior to
	version 1.9.  Change to use -define heif:ignore-transformations to
	use same naming strategy as the other existing defines.

2023-04-30  Tobias Mark  <tbsmark86@gmail.com>

	* coders/heif.c (ReadHEIFImage): HEIF: Fix reading images with
	rotation/transformation; added option to ignore them. SourceForge
	patch #70 "Fix Heif image with transformations".

	* doc/options.imdoc: Add documentation for -define
	heic:ignore-transformations.

2023-04-30  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: Deallocate 'pixels' correctly, fix MEZ reindexing.

2023-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/download.rst: More properly describe how to use 'gpg
	--verify'.

2023-04-29  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: First attempt to make a writer.
	* magick/blob.h magick/blob.c: New function WriteBlobLSBDouble.

2023-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.h (RoundDoubleToQuantumN): New macro to address NaN
	issues when converting a double to a Quantum.  Use it where
	needed.

	* magick/import.c (ImportGrayQuantumType): If value is nan, then
	use 0.0. Addresses SourceForge issue #706 "Integer overflow,
	floating-point exception, pointer overflow in gm".
